--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,7 +36,7 @@ jobs:
         run: sudo apt-get install openssh-client
 
       - name: Build the stack
-        run: docker-compose -f docker-compose.staging.yml build --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} --build-arg NEXT_PUBLIC_IMAGE_PROXY_URL=${{ secrets.NEXT_PUBLIC_IMAGE_PROXY_URL }}
+        run: docker-compose -f docker-compose.build.yml build --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} --build-arg NEXT_PUBLIC_IMAGE_PROXY_URL=${{ secrets.NEXT_PUBLIC_IMAGE_PROXY_URL }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -46,10 +46,10 @@ jobs:
 
       - name: Push to dockerhub
         run: |
-          docker-compose -f docker-compose.staging.yml push
+          docker-compose -f docker-compose.build.yml push
 
       - name: stop containers
-        run: docker-compose -f docker-compose.staging.yml down --volumes
+        run: docker-compose -f docker-compose.build.yml down --volumes
 
       - name: Upload .env file to server
         uses: appleboy/scp-action@master
