--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,7 +36,7 @@ jobs:
         run: sudo apt-get install openssh-client
 
       - name: Build the stack
-        run: docker-compose -f docker-compose.build.yml build --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} --build-arg NEXT_PUBLIC_IMAGE_PROXY_URL=${{ secrets.NEXT_PUBLIC_IMAGE_PROXY_URL }}
+        run: docker-compose -f docker-compose.build.yml build
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
