Changes in Merged pdf uploader component

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "next": "15.1.11",
+    "pdf-lib": "^1.17.1",
     "react": "19.0.3",
     "react-dom": "19.0.3"
   },
